# mna-mlops-team46

./: .gitignore  1_clean_data_jmtoral.ipynb  LICENSE  Makefile  README.md  README_BACKUP_1365.md  README_REMOTE_1365.md  dvc.yaml  params.yaml  predict_app.py  predict_app_MGM.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_pipeline.sh
.dvc/: config
data/: german_credit_modified_cleaned.csv  german_credit_modified_cleaned.csv.dvc
data/interim/: df_modified_clean.csv.dvc
data/processed/: german_credit_clean.csv
data/raw/: german_credit_modified.csv
docs/: mkdocs.yml
docs/docs/: index.md
german_credit_ml/: __init__.py  clean.py  compare_outputs.py  config.py  dataset.py  eda.py  eda_v2.py  features.py  plots.py  utils.py
german_credit_ml/modeling/: predict.py  train.py  train2.py
german_credit_ml/outputs_original/: original.gitkeep
german_credit_ml/outputs_v2/: nuevo.gitkeep
logs/: validation_20251029_2050.txt
mlruns/0/: meta.yaml
mlruns/193233713794475137/: meta.yaml
models/: xgboost_model.pkl  xgboost_model_metadata.json
notebooks/: 1.1-cleaning.ipynb  1_clean_data.ipynb  1_clean_data_jmtoral.ipynb  2.1-eda.ipynb  2_0_eda_toral.ipynb  2_Exploración_y_preprocesamiento_de_datos.ipynb  3_modelado.ipynb
notebooks_old/: 2.0-eda-toral.ipynb
reports/: metrics.json
scripts/: 01_check_structure.py  02_check_refactor.py  03_check_sklearn_pipeline.py  04_check_tracking_models.py  check_refactor.py  check_structure.py  run_all_checks.sh  train.py  validate_cookiecutter.py
src/credit_risk/: __init__.py  config.py  data.py  viz.py  (+4 more)
(+274 files in other folders)
